@@ -8,6 +8,12 @@ import com.fiveguys.fivelogbackend.domain.blog.board.dto.*;
 import com.fiveguys.fivelogbackend.domain.blog.board.entity.Board;
 import com.fiveguys.fivelogbackend.domain.blog.board.repository.BoardRepository;
 import com.fiveguys.fivelogbackend.domain.blog.hashtag.HashtagUtil;
+import com.fiveguys.fivelogbackend.domain.blog.hashtag.entity.Hashtag;
+import com.fiveguys.fivelogbackend.domain.blog.hashtag.entity.Tagging;
+import com.fiveguys.fivelogbackend.domain.blog.hashtag.repository.HashTagRepository;
+import com.fiveguys.fivelogbackend.domain.blog.hashtag.repository.TaggingRepository;
+import com.fiveguys.fivelogbackend.domain.blog.hashtag.service.HashTagService;
+import com.fiveguys.fivelogbackend.domain.blog.hashtag.service.TaggingService;
 import com.fiveguys.fivelogbackend.domain.user.user.entity.User;
 import com.fiveguys.fivelogbackend.domain.user.user.serivce.UserService;
 import com.fiveguys.fivelogbackend.global.pagination.PageDto;
@@ -19,8 +25,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,21 +36,36 @@ public class BoardService {
     private final BoardRepository boardRepository;
     private final UserService userService;
     private final BlogRepository blogRepository;
+    private final HashTagService hashTagService;
+    private final TaggingService taggingService;
+
     //    @Transactional
-    public Board createBoard(CreateBoardRequestDto dto, Long id) {
+    public Board createBoard(CreateBoardRequestDto boardDto, Long id) {
         User user = userService.findById(id).orElseThrow(() -> new IllegalArgumentException("존재하지 않는 id입니다."));
         Blog blog = blogRepository.findByUserId(user.getId()).orElseThrow(() -> new IllegalArgumentException("존재하지 않는 blog id 입니다."));
+        //hashtags 관련 로직이 이제 들어가야 함
+        //ㅗㅁ
+        List<String> hashtags = boardDto.getHashtags();
+        List<Hashtag> savedHashTagList = hashTagService.createHashtags(hashtags);
+
+
+        // hashtags name이 없다면 새로운 hashTags 이름을 생성
+        // name 이 있다면 그 hash 태그를 가져오기
+        // 가져온 것을
+
         Board board = Board.builder()
-                .title(dto.getTitle())
-                .hashtags(HashtagUtil.joinHashtags(dto.getHashtags()))
-                .content(dto.getContent())
+                .title(boardDto.getTitle())
+                .content(boardDto.getContent())
                 .views(0L)
-                .status(dto.getStatus())
+                .status(boardDto.getStatus())
                 .user(user)
                 .blog(blog)
                 .build();
+        Board savedBoard= boardRepository.save(board);
 
-        return boardRepository.save(board);
+        taggingService.saveAllTaggingList(savedBoard, savedHashTagList);
+
+        return savedBoard;
     }
 
     public CreateBoardResponseDto getBoard(Long id) {
@@ -63,17 +83,29 @@ public class BoardService {
 
     // 앞에 자동으로 #붙이고 중복제거 GPT가 만들어줬어요ㅎ
 
-    public Page<Board> searchBoardsByHashtag(String tagName, Pageable pageable) {
-        String searchTagName = tagName.startsWith("#") ? tagName.trim() : "#" + tagName.trim();
-        return boardRepository.findByHashtagsContainingIgnoreCase(searchTagName, pageable);
-    }
+//    public Page<Board> searchBoardsByHashtag(String tagName, Pageable pageable) {
+//        String searchTagName = tagName.startsWith("#") ? tagName.trim() : "#" + tagName.trim();
+//        return boardRepository.findByHashtagsContainingIgnoreCase(searchTagName, pageable);
+//    }
     //dto로 바꿔야함
     public BoardPageResponseDto getBoardMainPageResponseDtoList (Page<Board> pageBoards){
         PageDto unitPageInit = PageUt.get10unitPageDto(pageBoards.getNumber(), pageBoards.getTotalPages());
-        List<BoardSummaryDto> boardSummaryDtoList = pageBoards.getContent()
-                .stream()
-                .map(BoardSummaryDto::from)
-                .collect(Collectors.toList());
+
+        List<Board> boards = pageBoards.getContent();
+        List<Long> boardIds = boards.stream().map(Board::getId).toList();
+
+        // boardId -> [해시태그들] 맵
+        Map<Long, List<String>> hashtagMap = taggingService.getHashtagsGroupedByBoardIds(boardIds);
+
+
+        List<BoardSummaryDto> boardSummaryDtoList = boards.stream()
+                .map(board -> {
+                    List<String> hashtags = hashtagMap.getOrDefault(board.getId(), List.of());
+                    return BoardSummaryDto.from(board, hashtags);
+                })
+                .toList();
+
+
         return new BoardPageResponseDto(boardSummaryDtoList, unitPageInit);
     }
 
@@ -81,7 +113,11 @@ public class BoardService {
     public BoardDetailDto getBlogDetailDto( Long boardId){
         log.info("boardId {}", boardId);
         Board board = boardRepository.findWithUserById (boardId).orElseThrow(() -> new IllegalArgumentException("존재하지 않는 boardId 입니다."));
-        return BoardDetailDto.from(board);
+        // board id를 갖고 있는 모든 taggins를 추출하고
+        // taggings 의 tag id를 통해 모든 tag 찾기?
+        List<String> hashtagNameList = taggingService.findAllHashtagNameByBoardId(board.getId());
+
+        return BoardDetailDto.from(board, hashtagNameList);
     }
 
     @Transactional
@@ -125,4 +161,35 @@ public class BoardService {
                 .orElseThrow(() -> new CustomException(ErrorCode.BOARD_NOT_FOUND));
         boardRepository.delete(board);
     }
+
+    public Map<String, List<BoardSummaryDto>> getBoardMainPageByHashtags(List<Board> boardList) {
+        List<Long> boardIds = boardList.stream()
+                .map(Board::getId)
+                .collect(Collectors.toList());
+
+        // 1. boardId - hashtagName 매핑
+        Map<Long, List<String>> hashtagsGroupedByBoardIds = taggingService.getHashtagsGroupedByBoardIds(boardIds);
+
+
+        // 2. Board → BoardSummaryDto 변환
+        List<BoardSummaryDto> boardSummaryList = boardList.stream()
+                .map(board -> {
+                    List<String> hashtags = hashtagsGroupedByBoardIds.getOrDefault(board.getId(), Collections.emptyList());
+                    return BoardSummaryDto.from(board, hashtags);
+                })
+                .toList();
+
+        // 3. hashtagName → BoardSummaryDto 리스트 매핑
+        Map<String, List<BoardSummaryDto>> hashtagToBoardMap = new HashMap<>();
+        for (BoardSummaryDto dto : boardSummaryList) {
+            for (String hashtag : dto.getHashtags()) {
+                hashtagToBoardMap
+                        .computeIfAbsent(hashtag, key -> new ArrayList<>())
+                        .add(dto);
+            }
+        }
+
+        return hashtagToBoardMap;
+    }
+
 }
